--- a/wx_login_h5.html
+++ b/wx_login_h5.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>微信授权登录</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
+    <script src="/js/axios.min.js"></script>
+    <script src="/js/jweixin-1.6.0.js"></script>
     <style>
       .loading {
         position: fixed;
